attached_assets/Pasted-Compiled-with-problems-ERROR-in-src-components-VideoPreviewCard-jsx-Module-build-failed-from--1751810988761_1751810988762.txt
Compiled with problems:
×
ERROR in ./src/components/VideoPreviewCard.jsx
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/runner/workspace/src/components/VideoPreviewCard.jsx: Missing semicolon. (225:3)

  223 | ```
  224 | 
> 225 | ```tool_code
      |    ^
  226 | import React, { useState } from 'react';
  227 | import { useAppStore } from '../store/appStore';
  228 |
    at constructor (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:367:19)
    at JSXParserMixin.raise (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6627:19)
    at JSXParserMixin.semicolon (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:6923:10)
    at JSXParserMixin.parseExpressionStatement (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:13285:10)
    at JSXParserMixin.parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12899:19)
    at JSXParserMixin.parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12767:17)
    at JSXParserMixin.parseModuleItem (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12744:17)
    at JSXParserMixin.parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:13316:36)
    at JSXParserMixin.parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:13309:10)
    at JSXParserMixin.parseProgram (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12625:10)
    at JSXParserMixin.parseTopLevel (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12615:25)
    at JSXParserMixin.parse (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:14492:10)
    at parse (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:14526:38)
    at parser (/home/runner/workspace/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/home/runner/workspace/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/home/runner/workspace/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/home/runner/workspace/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/home/runner/workspace/node_modules/gensync/index.js:261:32)
    at /home/runner/workspace/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/home/runner/workspace/node_modules/gensync/index.js:223:11)